--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,7 +15,7 @@ a {
   text-decoration: none;
 }
 
-* {
+* { 
   box-sizing: border-box;
 }
 
@@ -27,4 +27,12 @@ a {
     color: white;
     background: black;
   }
+}
+
+.card {
+  @apply mb-5 block rounded-lg border border-gray-200 shadow-md;
+}
+
+.primary-button {
+  @apply rounded bg-amber-300 py-3 px-4  shadow outline-none hover:bg-amber-400 active:bg-amber-500
 }
