--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,7 +15,7 @@ a {
   text-decoration: none;
 }
 
-* { 
+* {
   box-sizing: border-box;
 }
 
@@ -34,5 +34,5 @@ a {
 }
 
 .primary-button {
-  @apply rounded bg-amber-300 py-3 px-4  shadow outline-none hover:bg-amber-400 active:bg-amber-500
+  @apply rounded bg-amber-300 py-3 px-4  shadow outline-none hover:bg-amber-400 active:bg-amber-500;
 }
